--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build-android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -23,18 +24,22 @@
     "react-native": "0.71.3",
     "react-native-bottom-sheet": "^1.0.3",
     "react-native-btr": "^2.2.0",
-    "react-native-date-picker": "^4.2.10",
+    "react-native-date-picker": "^4.2.11",
     "react-native-datepicker": "^1.7.2",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-pdf": "^0.14.0",
     "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
